tests/fixtures/invalid/none_lshift_float.py
# Cannot left shift None and Float
x: float = None << 1.0
